--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="section-title">
           <!-- <h2> About </h2> -->
           <h3>Learn More <span>About Me</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
         </div>
 
         <div class="row content">
@@ -318,7 +318,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <h3>Check Out <span> My Portfolio</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
         </div>
 
         <div class="row">
@@ -664,7 +664,7 @@
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
           <h3>Contact <span>Me</span></h3>
-          <p>If you have any questions or would like to collaborate, send me a message below or email me directly at irenelue01@gmail.com </p>
+          <!-- <p>If you have any questions or would like to collaborate, send me a message below or email me directly at irenelue01@gmail.com </p> -->
         </div>
 
         <div>
