--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
         <div class="section-title">
           <!-- <h2> About </h2> -->
-          <h3>Learn More <span>About Me</span></h3>
-          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
+          <h3> About <span> Irene </span> </h3>
+          <!-- <p> I'm a recent graduate in Computer Science from UC San Diego. Currently based in Los Angeles and seeking software engineering opportunities.  </p> -->
         </div>
 
         <div class="row content">
@@ -117,21 +117,25 @@
             <!-- added profile picture -->
             <div class="container-fluid">
             <div class="row-fluid">
-              <!-- team-00 profile picture -->
-              <div class="col-lg-11 col-md-6 d-flex align-items-stretch">
+
               <!-- team-0 profile picture -->
               <!-- <div class="col-lg-8 col-md-6 mx-auto"> -->
+              <!-- team-00 profile picture -->
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                 <div class="member">
+
                   <div class="member-img text-center">
-                    <img src="assets/img/team/team-0.jpg" class="img-fluid text-align" alt=""> 
+                    <img src="assets/img/team/team-0.jpg" class="img-fluid" alt=""> 
                   </div>
+
                 </div>
               </div>
+
             </div>
           </div>
          </div> 
 
-          <div class="col-lg-4 pt-4 pt-lg-0">
+         <div class="col-lg-4 pt-4 pt-lg-0">
             <p>
               Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego. 
             </p>
@@ -318,7 +322,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <h3>Check Out <span> My Portfolio</span></h3>
-          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
+          <p> My featured works and projects </p>
         </div>
 
         <div class="row">
@@ -664,7 +668,7 @@
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
           <h3>Contact <span>Me</span></h3>
-          <!-- <p>If you have any questions or would like to collaborate, send me a message below or email me directly at irenelue01@gmail.com </p> -->
+          <p>If you have any questions or would like to collaborate, send me a message!</p>
         </div>
 
         <div>
