--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row-fluid">
 
               <!-- team-0 profile picture -->
-              <div class="col-lg-12 col-md-6 mx-auto">
+              <div class="col-lg-10 col-md-6 mx-auto">
               <!-- team-00 profile picture -->
               <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member">
@@ -135,7 +135,7 @@
           </div>
          </div> 
 
-         <div class="col-lg-5 pt-4 pt-lg-0">
+         <div class="col-lg-3 pt-4 pt-lg-0 mx-auto">
             <p>
               Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego. 
             </p>
