--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="section-title">
           <!-- <h2> About </h2> -->
           <h3> About <span> Irene </span> </h3>
-          <p> testing </p>
+          <!-- <p> testing </p> -->
         </div>
 
         <div class="row content">
@@ -119,13 +119,13 @@
             <div class="row-fluid">
 
               <!-- team-0 profile picture -->
-              <div class="col-lg-10 col-md-6 mx-auto">
-              <!-- team-00 profile picture -->
-              <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
+              <div class="col-lg-12 col-md-6 mx-auto">
+               <!-- team-00 profile picture -->
+               <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member">
 
                   <div class="member-img text-center">
-                    <img src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
+                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
                   </div>
 
                 </div>
@@ -135,11 +135,11 @@
           </div>
          </div> 
 
-         <div class="col-lg-3 pt-4 pt-lg-0 mx-auto">
-            <p>
+         <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
+            <p style="font-size:125%">
               Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego. 
             </p>
-            <p>
+            <p style="font-size:125%">
               Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego.
               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/"><i class="bi bi-linkedin"></i></a>
