--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="member">
 
                   <div class="member-img text-center">
-                    <img id="prof-pic" src="assets/img/team/team-0.jpg" class="img-fluid" alt=""> 
+                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
                   </div>
 
                 </div>
@@ -322,7 +322,7 @@
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
           <h3>Check Out <span> My Portfolio</span></h3>
-          <p> My featured works and projects </p>
+          <p style="font-size:105%"> My featured works and projects </p>
         </div>
 
         <div class="row">
@@ -668,27 +668,35 @@
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
           <h3>Contact <span>Me</span></h3>
-          <p>If you have any questions or would like to collaborate, send me a message!</p>
+          <p style="font-size:105%">I'm always down to collaborate! If you have any questions or would like to work together, send me an email and I'll get back to you as soon as I can! </p>
         </div>
 
-        <div>
+<!--         <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211594.8820765097!2d-118.41657902332075!3d34.03950924470322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1624479571983!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
-        </div>
+        </div> -->
 
-        <div class="row mt-5">
+        <div class="row mt-3">
 
-          <div class="col-lg-4">
+          <div class="col-lg-5 mx-auto">
             <div class="info">
-               <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Los Angeles, CA</p>
-              </div> 
-
-              <div class="email">
+               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>irenelue01@gmail.com</p>
+              </div> 
+
+              <div class="email">
+                <!-- <i class="bi bi-linkedin"></i> -->
+                <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <h4>LinkedIn:</h4>
+                <p>irenelue</p>
+              </div>
+
+              <div class="email">
+                <!-- <i class="bi bi-github"></i> -->
+                <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <h4>Github:</h4>
+                <p>irenelue</p>
               </div>
 
       <!--         <div class="phone">
@@ -701,7 +709,7 @@
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+         <!--  <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -726,7 +734,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -806,8 +814,8 @@
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="https://www.linkedin.com/in/irenelue/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/irenelue" class="github"><i class="bx bxl-github"></i></a>
+        <!-- <a href="https://www.linkedin.com/in/irenelue/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/irenelue" class="github"><i class="bx bxl-github"></i></a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
