--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
           <h3>Contact <span>Me</span></h3>
-          <p style="font-size:105%">I'm always down to collaborate! If you have any questions or would like to work together, send me an email and I'll get back to you as soon as I can! </p>
+          <p style="font-size:105%">I'm always down to collaborate! If you'd like to work together or have any questions, send me an email and I'll get back to you as soon as I can! </p>
         </div>
 
 <!--         <div>
