--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             <p style="font-size:125%">
               Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego.
               <div class="social">
-                <a href="https://www.linkedin.com/in/irenelue/"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/irenelue"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/irenelue/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/irenelue" target="_blank"><i class="bi bi-github"></i></a>
               </div>
             </p>
           </div> 
