--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/irenelue" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.instagram.com/irenelue/" target="_blank"><i class="bi bi-instagram"></i></a>
               </div>
             </p>
           </div> 
