--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto " href="#about">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
@@ -345,8 +345,8 @@
             <div class="portfolio-info">
               <h4> Calculator </h4>
               <p> Finance </p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a> -->
+              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 
@@ -376,8 +376,8 @@
             <div class="portfolio-info">
               <h4> Pomodoro Player </h4>
               <p> Game </p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
+              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
             </div>
           </div>
 <!-- 
@@ -407,8 +407,8 @@
             <div class="portfolio-info">
               <h4> COVID-Code </h4>
               <p> Design </p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <!-- <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a> --> 
+              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a> <!-- bx bx-link -->
             </div>
           </div>
 
