--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -52,8 +52,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="#about">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
@@ -77,9 +77,9 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i> -->
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>  -->
+        </ul> 
+        <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
