--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row-fluid">
 
               <!-- team-0 profile picture -->
-              <div class="col-lg-12 col-md-6 mx-auto">
+              <div class="col-lg-7 col-md-6 mx-auto">
                <!-- team-00 profile picture -->
                <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member">
@@ -137,7 +137,8 @@
 
          <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
             <p style="font-size:125%">
-              Line 1
+              Line 1 --------------------------------------------------------------------------- <br>
+              ----------------------------------------------
             </p>
             <p style="font-size:125%">
               Line 2
@@ -322,8 +323,9 @@
 
         <div class="section-title">
           <!-- <h2>Portfolio</h2> -->
-          <h3>Check Out <span> My Portfolio</span></h3>
-          <p style="font-size:105%"> My featured works and projects </p>
+          <!-- <h3>Check Out <span> My Portfolio</span></h3> -->
+          <h3>Featured Projects</h3>
+          <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
 
         <div class="row">
