--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
-      <h2> I'm a recent graduate in Computer Science from UC San Diego. </h2>
-      <h2> Currently based in Los Angeles and seeking software engineering opportunities. </h2>
+<!--       <h2> I'm a recent graduate in Computer Science from UC San Diego. </h2>
+      <h2> Currently based in Los Angeles and seeking software engineering opportunities. </h2> -->
       <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow">Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -119,11 +119,10 @@
             <div class="row-fluid">
 
               <!-- team-0 profile picture -->
-              <div class="col-lg-9 col-md-6 mx-auto">
+              <div class="col-lg-9 col-md-8 mx-auto">
                <!-- team-00 profile picture -->
                <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member">
-
                   <div class="member-img text-center">
                     <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
                   </div>
@@ -137,11 +136,10 @@
 
          <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
             <p style="font-size:125%">
-              Line 1 --------------------------------------------------------------------------- <br>
-              ----------------------------------------------
+              Hi, I’m Irene! I’m a recent Computer Science graduate from UC San Diego. I’m an aspiring product designer and web developer looking forward to expanding my career in UX design. <br>
+              
             </p>
             <p style="font-size:125%">
-              Line 2
               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/irenelue" target="_blank"><i class="bi bi-github"></i></a>
@@ -305,17 +303,7 @@
     </section> --><!-- End Features Section -->
 
     <!-- ======= Cta Section ======= -->
-    <!--     <section id="cta" class="cta">
-      <div class="container">
-
-        <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
-        </div>
-
-      </div>
-    </section> --><!-- End Cta Section -->
+    <!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -438,6 +426,20 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Cta Section ======= -->
+    <!-- <section id="cta" class="cta">
+      <div class="container">
+
+        <div class="text-center">
+          <h3> Resume </h3>
+          <p> Check out my resume! </p>
+          <a class="cta-btn" href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a>
+        </div>
+
+      </div>
+    </section> --> <!-- End Cta Section -->
+
 
     <!-- ======= Pricing Section ======= -->
     <!-- <section id="pricing" class="pricing">
@@ -674,36 +676,37 @@
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
           <h3>Contact <span>Me</span></h3>
-          <p style="font-size:105%">If you'd like to work together or have any questions, let's get in touch and I'll get back to you as soon as I can! </p>
+          <p style="font-size:150%"> irenelue01@gmail.com </p>
+          <p style="font-size:100%">If you'd like to work together or have any questions, <br>
+            let's get in touch and I'll get back to you as soon as I can! </p>
         </div>
-
 <!--         <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211594.8820765097!2d-118.41657902332075!3d34.03950924470322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1624479571983!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
         </div> -->
+        
+        <div class="section-title">
+          <div class="email">
+            <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
+          </div>
+        </div>
 
-        <div class="row mt-3">
-
-          <div class="col-lg-5 mx-auto">
+        <!-- 09/20/21 and before - what the contact page used to look like -->
+<!--         <div class="row mt-0">
+          <div class="col-lg-6 mx-auto">
             <div class="info">
-               <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>irenelue01@gmail.com</p>
-              </div> 
-
               <div class="email">
                 <!-- <i class="bi bi-linkedin"></i> -->
                 <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <h4>LinkedIn:</h4>
-                <p>irenelue</p>
+                <!-- <h4>LinkedIn:</h4>
+                <p>irenelue</p> -->
               </div>
-
               <div class="email">
                 <!-- <i class="bi bi-github"></i> -->
                 <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <h4>Github:</h4>
-                <p>irenelue</p>
-              </div>
+                <!-- <h4> @irenelue </h4> -->
+                <!-- <p>irenelue</p> -->
+              </div> -->
 
       <!--         <div class="phone">
                 <i class="bi bi-phone"></i>
