--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
          </div> 
 
          <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
-            <p style="font-size:125%">
+            <p style="font-size:120%">
               Hi, I’m Irene! I’m a recent Computer Science graduate from UC San Diego. I’m an aspiring product designer and web developer looking forward to expanding my career in UX design. <br>
               
             </p>
             <p style="font-size:125%">
-              <div class="social">
+<!--               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/irenelue" target="_blank"><i class="bi bi-github"></i></a>
                 <a href="https://www.instagram.com/irenelue/" target="_blank"><i class="bi bi-instagram"></i></a>
-              </div>
+              </div> -->
             </p>
           </div> 
 
@@ -676,9 +676,10 @@
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
           <h3>Contact <span>Me</span></h3>
-          <p style="font-size:150%"> irenelue01@gmail.com </p>
+          <h4> irenelue01@gmail.com </h4>
           <p style="font-size:100%">If you'd like to work together or have any questions, <br>
             let's get in touch and I'll get back to you as soon as I can! </p>
+          
         </div>
 <!--         <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211594.8820765097!2d-118.41657902332075!3d34.03950924470322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1624479571983!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
@@ -688,35 +689,13 @@
           <div class="email">
             <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
+            <a href="https://www.instagram.com/irenelue/" target="_blank"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
         <!-- 09/20/21 and before - what the contact page used to look like -->
-<!--         <div class="row mt-0">
-          <div class="col-lg-6 mx-auto">
-            <div class="info">
-              <div class="email">
-                <!-- <i class="bi bi-linkedin"></i> -->
-                <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <!-- <h4>LinkedIn:</h4>
-                <p>irenelue</p> -->
-              </div>
-              <div class="email">
-                <!-- <i class="bi bi-github"></i> -->
-                <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <!-- <h4> @irenelue </h4> -->
-                <!-- <p>irenelue</p> -->
-              </div> -->
+        <!-- end of page -->
 
-      <!--         <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
-              </div> -->
-
-            </div>
-
-          </div>
 
          <!--  <div class="col-lg-8 mt-5 mt-lg-0">
 
