--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,
       400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,600,600i,700,700i|
       Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+      
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,6 +32,10 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- ADDED: font awesome CSS -->
+  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7d9196c9d9.js" crossorigin="anonymous"></script>
 
   <!-- =======================================================
   * Template Name: Tempo - v4.3.0
@@ -689,7 +694,8 @@
           <div class="email">
             <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
-            <a href="https://medium.com/@irenelue" target="_blank"><i class="bi bi-circle-fill"></i></a>
+            <a href="https://dribbble.com/irenelue/collections" target="_blank"><i class="fas fa-basketball-ball"></i></a>
+            <a href="https://medium.com/@irenelue" target="_blank"><i class="fab fa-medium-m"></i></a>
           </div>
         </div>
 
